--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <link rel="mask-icon" href="/fav.svg" color="#ff2d48">
     <meta name="msapplication-TileColor" content="#1e1e1e">
     <meta name="theme-color" content="#1e1e1e">
+
+    <!-- Font -->
+    <link rel="preload" href="src/assets/fonts/Hubot-Sans.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
