--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <!--<link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico"/>-->
-    <!-- HTML Meta Tags -->
-    <title>Ambient - generate contrast-safe colors for UI/UX</title>
-    <meta name="description" content="Create color shades just from primary colors that are APCA contrast safe, all done without the thinking."/>
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="theme-color" content="#000000"/>
+        <!--<link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico"/>-->
+        <!-- HTML Meta Tags -->
+        <title>Ambient - generate contrast-safe colors for UI/UX</title>
+        <meta name="description" content="Create color shades just from primary colors that are APCA contrast safe, all done without the thinking."/>
 
-    <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Ambient - generate contrast-safe colors for UI/UX"/>
-    <meta itemprop="description" content="Create color shades just from primary colors that are APCA contrast safe, all done without the thinking."/>
-    <meta itemprop="image" content="https://i.ibb.co/023K2MR/web-thumbnail.png"/>
+        <!-- Google / Search Engine Tags -->
+        <meta itemprop="name" content="Ambient - generate contrast-safe colors for UI/UX"/>
+        <meta itemprop="description" content="Create color shades just from primary colors that are APCA contrast safe, all done without the thinking."/>
+        <meta itemprop="image" content="https://i.ibb.co/023K2MR/web-thumbnail.png"/>
 
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://ambient-rvx.web.app"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Ambient - generate contrast-safe colors for UI/UX"/>
-    <meta property="og:description" content="Create color shades just from primary colors that are APCA contrast safe, all done without the thinking."/>
-    <meta property="og:image" content="https://i.ibb.co/023K2MR/web-thumbnail.png"/>
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://ambient-rvx.web.app"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Ambient - generate contrast-safe colors for UI/UX"/>
+        <meta property="og:description" content="Create color shades just from primary colors that are APCA contrast safe, all done without the thinking."/>
+        <meta property="og:image" content="https://i.ibb.co/023K2MR/web-thumbnail.png"/>
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="Ambient - generate contrast-safe colors for UI/UX"/>
-    <meta name="twitter:description" content="Create color shades just from primary colors that are APCA contrast safe, all done without the thinking."/>
-    <meta name="twitter:image" content="https://i.ibb.co/023K2MR/web-thumbnail.png"/>
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image"/>
+        <meta name="twitter:title" content="Ambient - generate contrast-safe colors for UI/UX"/>
+        <meta name="twitter:description" content="Create color shades just from primary colors that are APCA contrast safe, all done without the thinking."/>
+        <meta name="twitter:image" content="https://i.ibb.co/023K2MR/web-thumbnail.png"/>
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/fav.svg" color="#ff2d48">
-    <meta name="msapplication-TileColor" content="#1e1e1e">
-    <meta name="theme-color" content="#1e1e1e">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/fav.svg" color="#ff2d48">
+        <meta name="msapplication-TileColor" content="#1e1e1e">
+        <meta name="theme-color" content="#1e1e1e">
 
-    <!-- Font -->
-    <link rel="preload" href="src/assets/fonts/Hubot-Sans.woff2" as="font" type="font/woff2" crossorigin>
-</head>
-<body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
+        <!-- Font -->
+        <link rel="preload" href="src/assets/fonts/Hubot-Sans.woff2" as="font" type="font/woff2" crossorigin>
+    </head>
+    <body class="bg-white dark:bg-neutral-900">
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
 
-<script src="/src/index.tsx" type="module"></script>
-</body>
+        <script src="/src/index.tsx" type="module"></script>
+    </body>
 </html>
