--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Font -->
         <link rel="preload" href="src/assets/fonts/Hubot-Sans.woff2" as="font" type="font/woff2" crossorigin>
     </head>
-    <body class="bg-white dark:bg-neutral-900">
+    <body class="bg-pink-500">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
 
