fix: Fix reactivity behavior for ColorSwatch
Moved visibleSwatch to App to access globally without toggle component

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta name="theme-color" content="#000000"/>
+        <meta name="theme-color" content="#F13D52"/>
         <!--<link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico"/>-->
         <!-- HTML Meta Tags -->
         <title>Ambient - generate contrast-safe colors for UI/UX</title>
@@ -39,10 +39,14 @@
         <!-- Font -->
         <link rel="preload" href="src/assets/fonts/Hubot-Sans.woff2" as="font" type="font/woff2" crossorigin>
     </head>
-    <body class="bg-white dark:bg-[#181819]">
+    <body class="bg-am-pink">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-
+        <script>
+            window.addEventListener("error", (event) => {
+                console.log(event);
+            });
+        </script>
         <script src="/src/index.tsx" type="module"></script>
     </body>
 </html>
